--- a/O nas/style.css
+++ b/O nas/style.css
@@ -63,7 +63,7 @@ header.sticky .navbar-right {
 
 .navbar-left a {
     text-decoration: none;
-    color: #57a2d8;
+    color: black;
 }
 
 a:visited {
